--- a/src/components/GalleryItem/GalleryItem.scss
+++ b/src/components/GalleryItem/GalleryItem.scss
@@ -12,12 +12,12 @@
     span {
       display: flex;
       align-items: center;
-      height: 9em;
-      margin: 1em;
+      // height: 8.75em;
+      // margin: 1em;
       text-align: center;
     }
     button {
-      height: 3em;
+      height: 2.75em;
       margin: 2em 0 0 0;
     }
     .toggle {
