complete PUT route / LIKES logic / 2 out of 3 passing test

--- a/src/components/GalleryItem/GalleryItem.scss
+++ b/src/components/GalleryItem/GalleryItem.scss
@@ -12,7 +12,7 @@
     span {
       display: flex;
       align-items: center;
-      // height: 8.75em;
+      height: 30%; // TODO FIX
       // margin: 1em;
       text-align: center;
     }
